package/backend/docker/envoy/envoy.json
{
  "static_resources": {
    "listeners": [
      {
        "name": "listener_0",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 443
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "auto",
                  "stat_prefix": "ingress_http",
                  "use_remote_address": true,
                  "xff_num_trusted_hops": 0,
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "local_service",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "auth",
                              "max_grpc_timeout": "0s"
                            }
                          }
                        ],
                        "cors": {
                          "allow_origin": [
                            "*"
                          ],
                          "allow_methods": "GET, PUT, DELETE, POST, OPTIONS",
                          "allow_headers": "keep-alive, user-agent, cache-control, content-type, content-transfer-encoding, Authorization, x-ip, x-accept-content-transfer-encoding, x-accept-response-streaming, x-user-agent, x-grpc-web, grpc-timeout",
                          "max_age": "1728000",
                          "expose_headers": "grpc-status, grpc-message"
                        }
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.cors"
                    },
                    {
                      "name": "envoy.grpc_web"
                    },
                    {
                      "name": "envoy.router"
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "auth",
        "connect_timeout": "0.25s",
        "type": "LOGICAL_DNS",
        "lb_policy": "ROUND_ROBIN",
        "http2_protocol_options": {},
        "load_assignment": {
          "cluster_name": "auth",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "auth",
                        "port_value": 9090
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  }
}
